--- a/static/styles/home.scss
+++ b/static/styles/home.scss
@@ -10,6 +10,23 @@
     padding-top: 2.9vh;
   }
 
+  &__lang {
+    align-items: center;
+    color: #ff9900;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1.25rem;
+
+    a {
+      color: #ff9900;
+      font-size: 18px;
+    }
+
+    img {
+      height: 23px;
+    }
+  }
+
   &__title {
     color: #ff9900;
     font-size: 2.5vw;
@@ -112,8 +129,16 @@
       margin: 1rem auto 0;
     }
 
+    &__lang {
+      margin-right: 0.75rem;
+  
+      a {
+        font-size: 20px;
+      }
+    }
+
     &__section {
-      margin: auto 0.5rem;
+      margin: 1.5rem 0.5rem auto;
     }
 
     &__paragraph {
