--- a/static/styles/home.scss
+++ b/static/styles/home.scss
@@ -15,7 +15,10 @@
     color: #ff9900;
     display: flex;
     justify-content: flex-end;
-    margin-right: 1.25rem;
+    margin-right: 1rem;
+    position: absolute;
+    right: 0;
+    top: 0.75rem;
 
     a {
       color: #ff9900;
@@ -23,7 +26,7 @@
     }
 
     img {
-      height: 23px;
+      height: 18px;
     }
   }
 
@@ -124,6 +127,10 @@
 @media (max-width: 750px) {
 
   .home {
+    &__container {
+      padding-top: 5vh;
+    }
+
     &__title {
       font-size: 8vw;
       margin: 1rem auto 0;
@@ -134,6 +141,10 @@
   
       a {
         font-size: 20px;
+      }
+
+      img {
+        height: 20px;
       }
     }
 
