--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="{{ g.language }}">
   <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163995430-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163995430-1');
+</script>
+
     {% block head %}
     {% assets "scss_all" %}
       <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/main.css') }}">
