Flow for profile deleting/check

--- a/templates/snippets/footer/footer.html
+++ b/templates/snippets/footer/footer.html
@@ -19,5 +19,12 @@
   <p class="footer__copyright">
     {{ _('footer.copyright') }}
   </p>
+  <p class="footer__separator">&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+  <a
+    class="footer__link"
+    href="/del_profile"
+  >
+  {{ _('footer.delete-profile') }}
+  </a>
   {% endblock %}
 </footer>
